--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<b>connor</b>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <title>Quest for the Holy Grail</title>
+
+  </head>
+
+  <body>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" href="./assets/javascript/app.js"></script>
+
+    <h1>Quest for the Holy Grail</h1>
+
+    <p>Sir [Insert Name Here]! You must answer the wizard's questions to cross the Bridge of Death and obtain the Holy Grail, but your time is limited! Wrong answers will be your doom!</p>
+
+    <h3>What... is your title?</h3>
+    <h3>What... is your quest?</h3>
+    <h3>What... is your favorite color?</h3>
+
+
+  </body>
+
+</html>
