--- a/index.html
+++ b/index.html
@@ -1,29 +1,90 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8">
+    <title>TrainSpotter</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
+    <!-- Moment.js Reference -->
+    <!-- <script src="http://momentjs.com/downloads/moment.js"></script>   -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  </head>
+  <body>
+    <!--Train tracker-->
+<div class ="container">
+<!--Jumbotron-->
+<div class="jumbotron" style="background: navy">
+  <h1 class="text-center" style="color: white">Train Spotter</h1>
+  <h3 class="text-center" style="color: white">Train Schedule Simulator</h3>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+    <!--Current Train Schedule-->
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title current"><strong>Current Train Schedule</strong></h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-hover" id='trainTable'>
+            <thead>
+              <tr>
+                <th>Train Name</th>
+                <th>Destination</th>
+                <th>Next Arrival</th>
+                <th>Frequency(minutes)</th>
+                <th>Minutes Away</th>
+              </tr>
+            </thead>
+            <tbody>
+              
+            </tbody>
+          </table>
+        </div>
+      </div>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+      <!-- Add Trains  -->
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title add"><strong>Add Trains</strong></h3>
+        </div>
+        <div class="panel-body">
 
-  <title>PUP HUB</title>
+        <!-- Entry Form -->
+        <form>
+          <div class="form-group">
+            <label for="">Train Name</label>
+            <input type="text" class="form-control" id="trainInput">
+          </div>
 
-</head>
-<body>
+          <div class="form-group">
+            <label for="">Destination</label>
+            <input type="text" class="form-control" id="desInput">
+          </div>
 
-	<div id="dogButtons"></div>
-	
-	<form id="dog-form">
-		<label for="dog-input">Add a dog</label>
-		<input type="text" id="dog-input">
+          <div class="form-group">
+            <label for="">First Train Time (HH:mm - military time)</label>
+            <input type="text" class="form-control" id="timeInput">
+          </div>
 
-		<input id="addDog" type="submit" value="Submit">
-	</form>
+          <div class="form-group">
+            <label for="">Frequency (min)</label>
+            <input type="text" class="form-control" id="freqInput">
+          </div>
+          
+          <button type="submit" class="btn btn-primary" id="addTrainBtn">Submit</button>
+        </form>
 
-	<div id="dogs"></div>
-	
+        </div>
+      </div>
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script type="text/javascript" src="assets/javascript.js"></script>
-</body>
-
+    </div>
+  </div>
+</div>
+    <!-- JavaScript -->
+    <script src="javascript.js"></script>
+  </body>
 </html>
