updated color and cleaned some things up

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </section>
 
     <!-- Samples -->
-    <section id="services" class="services bg-primary text-white">
+    <section id="services" class="services text-white">
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-10 mx-auto">
@@ -97,7 +97,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-shopping-cart fa-stack-1x text-primary"></i>
+                    <i class="fa fa-shopping-cart fa-stack-1x text-danger"></i>
                   </span>
                   <h4>
                     <strong>Bamazon</strong>
@@ -110,7 +110,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-train fa-stack-1x text-primary"></i>
+                    <i class="fa fa-train fa-stack-1x text-danger"></i>
                   </span>
                   <h4>
                     <strong>Trainspotter</strong>
@@ -123,7 +123,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-microchip fa-stack-1x text-primary"></i>
+                    <i class="fa fa-microchip fa-stack-1x text-danger"></i>
                   </span>
                   <h4>
                     <strong>LIRI Bot</strong>
@@ -136,7 +136,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-hand-pointer-o fa-stack-1x text-primary"></i>
+                    <i class="fa fa-hand-pointer-o fa-stack-1x text-danger"></i>
                   </span>
                   <h4>
                     <strong>Clicky Game</strong>
@@ -155,12 +155,13 @@
       <!-- /.container -->
     </section>
 
-    <!-- Callout -->
+    <!-- Callout 
     <aside class="callout">
       <div class="text-vertical-center">
         <h1>And This is Only the Beginning</h1>
       </div>
     </aside>
+  -->
 
     <!-- Teamup -->
     <section id="portfolio" class="portfolio">
@@ -228,10 +229,10 @@
     </section>
 
     <!-- Call to Action -->
-    <aside class="call-to-action bg-primary text-white">
+    <aside class="call-to-action text-white">
       <div class="container text-center">
-        <h3>Look at these buttons! They compel you to click!</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
+        <h3>View Connor's Resume here! Always updating!</h3>
+        <a href="https://docs.google.com/document/d/1dz5Kv5hTrQbeDdcKxWPRb6qb1py1SMS-FcVlKrYUme4/edit?usp=sharing" class="btn btn-lg btn-light">Click Me!</a>
         <a href="#contact" class="btn btn-lg btn-dark">Find me!</a>
       </div>
     </aside>
